test/fails/bad_types/auto1.lgl
void main() {
    auto v = [1., 2.];
}